# AreTheyGoodAtLeagueBot

./: .env  Cargo.toml  Dockerfile  README.md  ecs.json
.github/workflows/: aws.yml
src/: main.rs
src/commands/: mod.rs  riot.rs  verdict.rs
src/models/: matches.rs  mod.rs  summoner.rs
src/utils/: flair.rs  mod.rs  rest.rs  riot.rs
